refactor: improve string interpolation + few small tweaks