@@ -13,7 +13,7 @@ import java.util.List;
 public class Utils {
 
     public static <T> boolean listNotEmpty(List<T> list) {
-        return list != null && list.size() > 0 && list.get(0) != null;
+        return list != null && !list.isEmpty() && list.getFirst() != null;
     }
 
     public static <T> T  getFirstItem(List<T> list) {
